--- a/NasaAstronomyPicture.Api/Properties/launchSettings.json
+++ b/NasaAstronomyPicture.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/nasa-astronomy-picture",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "NasaPicOfTheDay.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/nasa-astronomy-picture",
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
